@@ -50,6 +50,7 @@ Fixed QL bugs:
 -Fixed system call IO.FSTRG
 -Fixed system call IO.EDLIN
 -Fixed system call IO.FCLOSE
+-Fixed system call IO.DELET
 -Fixed possible hang calling IO.SSTRG
 -Fixed cursor flashing
 -Fixed RTC emulation
